--- a/templates/index.html
+++ b/templates/index.html
@@ -9,6 +9,5 @@
 {# <script type="text/javascript" src="/static/js/bundle.js"></script> #}
 
 <!-- <script type="text/javascript" src="/static/js/vendor.bundle.js.gz"></script>
-<script type="text/javascript" src="/static/js/bundle.js.gz"></script>
- -->
+<script type="text/javascript" src="/static/js/bundle.js.gz"></script> -->
 {% endblock %}
