--- a/templates/index.html
+++ b/templates/index.html
@@ -4,10 +4,11 @@
 {% endblock %}
 {% block content %}
 <div id="app"></div>
-<script src="http://localhost:3001/vendor.bundle.js"></script>
+<!--<script src="http://localhost:3001/vendor.bundle.js"></script>
 <script src="http://localhost:3001/bundle.js"></script>
+-->
 {# <script type="text/javascript" src="/static/js/bundle.js"></script> #}
 
-<!-- <script type="text/javascript" src="/static/js/vendor.bundle.js.gz"></script>
-<script type="text/javascript" src="/static/js/bundle.js.gz"></script> -->
+<script type="text/javascript" src="/static/js/vendor.bundle.js.gz"></script>
+<script type="text/javascript" src="/static/js/bundle.js.gz"></script>
 {% endblock %}
